--- a/themes/bilberry-hugo-theme/layouts/_default/baseof.html
+++ b/themes/bilberry-hugo-theme/layouts/_default/baseof.html
@@ -45,6 +45,8 @@
         {{- else -}}
         <meta property="og:type" content="website">
         {{- end }}
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" | absURL }}">
+        <link rel="manifest" href="{{ "manifest.json" | absURL }}">
         <link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | absURL }}" sizes="32x32">
         <link rel="icon" type="image/png" href="{{ "favicon-16x16.png" | absURL }}" sizes="16x16">
 
