Removed praying hands on article

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -77,7 +77,7 @@
     </main>
 
     <footer>
-      <a href="/about/">{{ metadata.author.name }}</a>
+      <a href="/about/">about {{ metadata.author.name }}</a>
       <div id="reading-progress" aria-hidden="true"></div>
     </footer>
 
