--- a/_assets/css/_article.scss
+++ b/_assets/css/_article.scss
@@ -30,26 +30,18 @@ article {
             list-style: none;
             padding: 0;
             font-size: 1rem;
-            margin-bottom: bs(.5);
+
+            --gap: 10px;
+            display: inline-flex;
+            flex-wrap: wrap;
+            margin: bs(.5) 0 bs(.5) calc(-1 * var(--gap));
+            width: calc(100% + var(--gap));
 
             li {
                 display: inline-block;
-                padding: bs(.1) bs(.2);
-                // margin: bs(.1) bs(.2);
-                // background-color: $orange;
-
-                // a {
-                //     color: $site-bg;
-                // }
-
-                &:first-child {
-                    margin-left: 0;
-                    padding-left: 0;
-                }
+                margin: 0 0 0 var(--gap);
                 
             }
-
-            
         }
     }
 
