--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -65,7 +65,7 @@
     </header>
 
     <main>
-      <article>
+      {# <article> #}
         {% block article %}
           {{ content | safe }}
         {% endblock %}
@@ -73,7 +73,7 @@
         {% if page.url.indexOf("/articles/") > -1 %}
           <p>Published <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time></p>
         {% endif %}
-      </article>
+      {# </article> #}
     </main>
 
     <footer>
