--- a/_includes/layouts/recipe.njk
+++ b/_includes/layouts/recipe.njk
@@ -22,21 +22,23 @@ templateClass: tmpl-post
 {% set shareUrl = metadata.url + page.url %}
 
 {% block article %}
-<h2>Ingredients</h2>
-<ul>
-  {% for ingredient in ingredients %}
-    <li>{{ ingredient | safe }}</li>
-  {% endfor %}
-</ul>
-<h2>Methods</h2>
-{{ content | safe }}
+<article>
+  <h2>Ingredients</h2>
+  <ul>
+    {% for ingredient in ingredients %}
+      <li>{{ ingredient | safe }}</li>
+    {% endfor %}
+  </ul>
+  <h2>Methods</h2>
+  {{ content | safe }}
 
-<h1>🙏🙏🙏</h1>
-<p>
-  Since you've made it this far, <a href="{{ shareUrl | safe }}" on-click="share">sharing</a> this article on your favorite social media network 
-  would be highly appreciated 💖! For feedback, please 
-  <a href="https://twitter.com/{{ metadata.author.twitterHandle }}" target="_blank" rel="noopener">ping me on Twitter.</a>
-</p>
+  <h1>🙏🙏🙏</h1>
+  <p>
+    Since you've made it this far, <a href="{{ shareUrl | safe }}" on-click="share">sharing</a> this article on your favorite social media network 
+    would be highly appreciated 💖! For feedback, please 
+    <a href="https://twitter.com/{{ metadata.author.twitterHandle }}" target="_blank" rel="noopener">ping me on Twitter.</a>
+  </p>
+</article>
 
 <share-widget>
   <button on-click="share" aria-label="Share" href="{{ shareUrl | safe }}">
