custom attribute and css for ingredients

--- a/_assets/css/_article.scss
+++ b/_assets/css/_article.scss
@@ -45,6 +45,10 @@ article {
         }
     }
 
+    ul[ingredients] {
+        padding-left: bs(1)
+    }
+
     section {
         width: auto;
     }
