--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,4 +1,7 @@
 {% for post in postslist | reverse %}
+{% if loop.index === 3 %}
+  <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CEBIEK7Y&placement=wwwdantuckcom" id="_carbonads_js"></script>
+{% endif %}
 <article>
   <header>
     <h2>
