--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -31,15 +31,18 @@ const { title, author, publishDate, heroImage, alt } = Astro.props;
 
 <!-- <Header {title} /> -->
 
-
-
 <article>
 	<main>
 		<slot />
 	</main>
 	<p>
 		Since you've made it this far, <a href="" on-click="share">sharing</a> this article on your favorite social media network 
-		would be highly appreciated 💖! For feedback, please 
-		<a href="https://twitter.com/me_dantuck" target="_blank" rel="noopener">ping me on Twitter.</a>
+		would be highly appreciated 💖!
+	</p>
+	<p>
+		For feedback, please ping me on Mastodon
+		<a href="https://fosstodon.org/@tuck" target="_blank" rel="noopener">
+			@tuck@fosstodon.org
+		</a>.
 	</p>
 </article>
