--- a/src/styles/_pre.scss
+++ b/src/styles/_pre.scss
@@ -23,7 +23,7 @@
 @import 'defs';
 
 pre {
-	padding: 1.2em 0;
+	padding: .8em .8em;
 	margin: .2em 0;
 	overflow: auto;
 }
@@ -34,10 +34,12 @@ code {
 	color: $code-color;
 	font-family: $monospace;
 	font-size: 90%;
-	padding: bs(.2) bs(.4)
+	padding: bs(.2) bs(.4);
+	white-space: nowrap;
   }
 
 pre code {
+	padding: 0;
 	font-size: 14px;
 	line-height: 1.375;
 	direction: ltr;
